<resources>
    <string name="app_name">Расписание</string>
    <string name="app_main_button">Button</string>
    <string name="logo">Расписание</string>
    <string name="day1">ПН</string>
    <string name="day2">ВТ</string>
    <string name="day3">СР</string>
    <string name="day4">ЧТ</string>
    <string name="day5">ПТ</string>
    <string name="day6">СБ</string>
    <string name="day7">ВС</string>
    <string name="no_activities">No activities</string>
    <string name="activity_create_start_time">Начало в</string>
    <string name="activity_create_end_time">Конец в</string>
    <string name="selected_time_format">%1$s:%2$s</string>
    <string name="activity_name_AutoCompleteText">Название пары</string>
    <string name="activity_cabinet_AutoCompleteText">Кабинет</string>
    <string name="type_of_activity">Тип занятия</string>
    <string-array name="activityType">
        <item>ПР</item>
        <item>ЛК</item>
        <item>Д</item>
    </string-array>
    <string name="activity_create_add_button">Добавить пару</string>
    <string name="save">Save</string>
    <string name="cancel">Canel</string>
    <string name="empty_name_activity">Нет пары</string>
    <string name="appwidget_text" translatable="false">EXAMPLE</string>
    <string name="add_widget" translatable="false">Add widget</string>
    <string name="app_widget_description" translatable="false">This is an app widget description</string>
</resources>