<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mainLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg"
    android:visibility="visible"
    app:layout_constraintWidth_percent="0.3"
    tools:context=".pages.pageMain.MainActivity">

    <TextView
        android:id="@+id/string_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:fontFamily="@font/montserrat_medium"
        android:shadowColor="@color/white_shadow"
        android:shadowDx="0"
        android:shadowDy="0"
        android:shadowRadius="6"
        android:text="@string/logo"
        android:textColor="@color/white"
        android:textSize="23sp"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@+id/HorizontalScrollView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.core.widget.NestedScrollView
        android:id="@+id/HorizontalScrollView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:baselineAligned="true"
        android:fillViewport="true"
        android:gravity="center"
        android:isScrollContainer="true"
        android:orientation="horizontal"
        android:overScrollMode="ifContentScrolls"
        android:persistentDrawingCache="scrolling"
        android:scrollbars="none"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/topBarButtons">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/DaysListView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:listSelector="@android:color/transparent"
            android:orientation="horizontal"
            android:scrollbars="none"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />
    </androidx.core.widget.NestedScrollView>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/bg_round_corner"
        android:padding="10sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/HorizontalScrollView"
        app:layout_constraintVertical_bias="0.0">

        <ListView
            android:id="@+id/ActivitiesListView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:listSelector="@android:color/transparent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/no_activities_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat_medium"
            android:text="@string/no_activities"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:id="@+id/topBarButtons"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8sp"
        android:layout_marginEnd="16dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/buttonRgbSelector"
            android:layout_width="36sp"
            android:layout_height="36sp"
            android:layout_marginEnd="15sp"
            app:srcCompat="@drawable/rgb_circle" />

        <ImageView
            android:id="@+id/editActivitiesButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:contentDescription="@string/app_main_button"
            android:minWidth="48dp"
            android:minHeight="48dp"
            android:padding="4sp"
            app:srcCompat="@drawable/ic_baseline_edit_24" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>